<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_medicine"
            android:title="@string/menu_medicine" />
        <item
            android:id="@+id/nav_yoga"
            android:title="@string/menu_yoga" />
        <item
            android:id="@+id/nav_assistant"
            android:title="@string/menu_assistant" />
    </group>

    <item android:title="Otros">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_user_icon"
                android:title="@string/menu_profile"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
